<resources>
    <string name="app_name">Tinder Clone</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Sign Up</string>
    <string name="startup_logo_description">App Logo</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Name</string>
    <string name="hint_age">Age</string>
    <string name="hint_gender">I am a</string>
    <string name="hint_male">Male</string>
    <string name="hint_female">Female</string>
    <string name="hint_interested_gender">Interested in</string>
    <string name="btn_apply">Apply</string>
    <string name="btn_signout">Signout</string>
    <string name="error_incomplete_profile">Profile incomplete</string>
    <string name="no_available_users">No available users</string>
    <string name="no_matches_string">No matches</string>
    <string name="send_btn_text">Send</string>
    <string name="hint_message">Message</string>
</resources>